# tclbot

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  run.py
bot/: __init__.py
bot/keyboards/: keyboards.py
bot/messages/: messages.py
bot/middleware/: __init__.py
config/: __init__.py
